@@ -1,0 +1,5 @@
+use strict;
+use warnings;
+use Test::CleanNamespaces;
+
+all_namespaces_clean;
